Updated the front view

--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laundry Services Web App</title>
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <nav>
+            <div class="row">
+                <h2 class="logo">Logo</h2>
+                <ul class="main-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+                <button class="username">Username</button>
+            </div>
+            <div class="hero-row">
+                <div class="hero-text-box">
+                    <h1>Revitalize Your</h1>
+                    <h1> Clothes with Expert</h1>
+                    <h1 class="hero-blue">Laundry Services!</h1>
+                    <p>From premium dry cleaning to swift wash and fold, we deliver care and convenience. Schedule a pickup
+                    and rediscover the freshness of your clothes today! </p>
+                    <a href="#" class="btn btn-full"> <ion-icon class="icn-calender" name="calendar-clear-outline"></ion-icon> Book a service today!</a>
+                </div>
+                <div class="hero-image-box">
+                    <img src="resources/img/1.png" alt="Laundry Image" class="hero-img">
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="section-achievements">
+            <div class="achievements">
+                <h2>Our Achievements</h2>
+            </div>
+            <div class="achievement-item">
+                <h3>15+</h3>
+                <p>Laundry Services</p>
+            </div>
+            <div class="achievement-item">
+                <h3>240+</h3>
+                <p>Happy Customers</p>
+            </div>
+            <div class="achievement-item">
+                <h3>2+ Yrs</h3>
+                <p>Experience</p>
+            </div>
+        </section>
+
+    </main>
     <footer></footer>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
